style: adjust styles spacing and image layout issues

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -9,7 +9,7 @@
     padding: 0 20px;
     width: 100%;
     max-width: 800px;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 1rem;
     letter-spacing: 0.8px;
 }
@@ -56,4 +56,10 @@ h2 {
     display: flex;
     justify-content: center;
     border: 2px dashed var(--accent-color);
+}
+
+.project-content img {
+    display: block;
+    max-width: 80%;
+    margin: 0 auto;
 }
